src/objects/COVA_Task__c.object
<CustomObject>
    <fields>
        <fullName>COVA_BillingRule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>COVA_BillingRule</label>
        <referenceTo>COVA_BillingRule__c</referenceTo>
        <relationshipLabel>COVA_Tasks</relationshipLabel>
        <relationshipName>COVA_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COVA_Consultant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>COVA_Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>COVA_Tasks</relationshipLabel>
        <relationshipName>COVA_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COVA_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>COVA_Project</label>
        <referenceTo>COVA_Project__c</referenceTo>
        <relationshipLabel>COVA_Tasks</relationshipLabel>
        <relationshipName>COVA_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COVA_UniqueTaskAndProject__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>COVA_UniqueTaskAndProject</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rg__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>COVA_Tasks</relationshipLabel>
        <relationshipName>COVA_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>COVA_Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>COVA_Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COVA_Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Test__c</fullName>
        <label>Test</label>
    </sharingReasons>
</CustomObject>